Updated name and details

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "menmo/site-manager",
+  "name": "menmo/wp-site-manager",
   "description": "A plugin for managing the wp-site table.",
   "keywords": [
     "wordpress",
